--- a/new_file.html
+++ b/new_file.html
@@ -7,5 +7,46 @@
 		</title>
 	</head>
 	<body>
+		<h6>
+			this is h6
+		</h6>
+		<!-- 换行 -->
+		<p>11111111111111111111111111111111111111111111111</p>
+		<!-- 超链接 -->
+		<a href="https://www.runoob.com/git/git-install-setup.html" target="_blank" >点击加入百度</a>
+		<!-- 图片加链接 -->
+		<a href="https://www.runoob.com/git/git-install-setup.html" target="_blank" >
+			<img src="https://imgconvert.csdnimg.cn/aHR0cDovL2Jsb2cuY29kaW5nbGFicy5vcmcvdXBsb2Fkcy9waWN0dXJlcy90aGVvcnktb2YtbXlzcWwtaW5kZXgvNC5wbmc?x-oss-process=image/format,png"/>
+		</a>
+		<!-- 锚点索引 -->
+		<h1>斗破苍穹</h1>
+		<a href="#first">第一章一节</a>
+		<a href="#second">第一章二节</a>
+		<a href="#thread">第一章三节</a>
+		<!-- 空盒子 -->
+		<div style="height: 30px;"></div>
+		<h1 id="first">雪山飞狐</h1>
+		<p>
+			雪山飞狐......................
+		</p>
+		<h1 id="second">雪山飞狐2</h1>
+		<p>
+			雪山飞狐2......................
+		</p>
+		<h1 id="thread">雪山飞狐3</h1>
+		<p>
+			雪山飞狐3......................
+		</p>
+		
+		
+		<!-- 表格 组合标签 -->
+		<!-- tr 行   td 列-->
+		<table>
+			<tr>
+				<td>
+					
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
