--- a/zuoye1.html
+++ b/zuoye1.html
@@ -51,27 +51,27 @@
 				</tr>
 				<tr>
 					<td><h3>湖北</h3>  <div style="width: 100px;"></div></td>
-					<td><h3>13522</h3> <div style="width: 100px;"></div></td>
-					<td><h3>396</h3>   <div style="width: 100px;"></div></td>
-					<td><h3>414</h3>   <div style="width: 100px;"></div></td>
+					<td><center><h3>13522</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>396</h3> </center>  <div style="width: 100px;"></div></td>
+					<td><center><h3>414</h3> </center>  <div style="width: 100px;"></div></td>
 				</tr>
 				<tr>
-					<td><h3>武汉</h3></td>
-					<td><h3>6384</h3></td>
-					<td><h3>303</h3></td>
-					<td><h3>313</h3></td>
+					<td><h3>武汉</h3> <div style="width: 100px;"></div></td>
+					<td><center><h3>6384</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>303</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>313</h3></center> <div style="width: 100px;"></div></td>
 				</tr>
 				<tr>
-					<td><h3>黄冈</h3></td>
-					<td><h3>1422</h3></td>
-					<td><h3>41</h3></td>
-					<td><h3>19</h3></td>
+					<td><h3>黄冈</h3><div style="width: 100px;"></div></td>
+					<td><center><h3>1422</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>41</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>19</h3></center> <div style="width: 100px;"></div></td>
 				</tr>
 				<tr>
-					<td><h3>孝感</h3></td>
-					<td><h3>1120</h3></td>
-					<td><h3>4</h3></td>
-					<td><h3>17</h3></td>
+					<td><h3>孝感</h3><div style="width: 100px;"></div></td>
+					<td><center><h3>1120</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>4</h3></center> <div style="width: 100px;"></div></td>
+					<td><center><h3>17</h3></center> <div style="width: 100px;"></div></td>
 				</tr>
 			</table>
 			
