--- a/zuoye1.html
+++ b/zuoye1.html
@@ -4,150 +4,186 @@
 		<meta charset="utf-8">
 		<title>全国疫情实时大数据报告</title>
 	</head>
-	<body>
-		<center>
+	<body bgcolor="#11aeb5">
+		<center >
 			<img src="D:/A_App/Github/repository/20200204/QQ20200204170751.png" />
-			<p></p>
-			<h1>全国疫情实时大数据报告</h1>
-			<p></p>
-			<table>
-				<td>
-					<div style="width: 30px;"></div>
-				</td>
-				<td>
-					<a href="#guonei"><h1>国内疫情</h1></a>
-				</td>
-				<td>
-					<div style="width: 30px;"></div>
-				</td>
-				<td>
-					<a href="#guowai"><h1>国外疫情</h1></a>
-				</td>
-			</table>
-			
-			<h1 id="guonei">国内疫情</h1>
-			<table>
-				<tr>
+			<div id="content" style="background-color: aliceblue;height: auto;width: 750px;">
+				<h1>全国疫情实时大数据报告</h1>
+				<p></p>
+				<table>
 					<td>
-						<center>
-							<h3>地区</h3>
-						</center>
+						<a href="#guonei"><h1>国内疫情</h1></a>
 					</td>
 					<td>
-						<center>
-							<h3>确诊</h3>
-						</center>
+						<div style="width: 100px;"></div>
 					</td>
 					<td>
-						<center>
-							<h3>治愈</h3>
-						</center>
+						<a href="#guowai"><h1>国外疫情</h1></a>
 					</td>
 					<td>
-						<center>
-							<h3>死亡</h3>
-						</center>
-					</td>
-				</tr>
-				<tr>
-					<td><h3>湖北</h3>  <div style="width: 100px;"></div></td>
-					<td><center><h3>13522</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>396</h3> </center>  <div style="width: 100px;"></div></td>
-					<td><center><h3>414</h3> </center>  <div style="width: 100px;"></div></td>
-				</tr>
-				<tr>
-					<td><h3>武汉</h3> <div style="width: 100px;"></div></td>
-					<td><center><h3>6384</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>303</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>313</h3></center> <div style="width: 100px;"></div></td>
-				</tr>
-				<tr>
-					<td><h3>黄冈</h3><div style="width: 100px;"></div></td>
-					<td><center><h3>1422</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>41</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>19</h3></center> <div style="width: 100px;"></div></td>
-				</tr>
-				<tr>
-					<td><h3>孝感</h3><div style="width: 100px;"></div></td>
-					<td><center><h3>1120</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>4</h3></center> <div style="width: 100px;"></div></td>
-					<td><center><h3>17</h3></center> <div style="width: 100px;"></div></td>
-				</tr>
-			</table>
-			
-			<h1 id="guowai">国外疫情</h1>
-			<table>
-				<tr>
-					<td>
-						<center>
-							<h2>161</h2>
-						</center>
+						<div style="width: 100px;"></div>
 					</td>
 					<td>
-						<center>
-							<h2>16</h2> 
-						</center>
+						<a href="#qianxi"><h1>迁徙地图</h1></a>
 					</td>
-					<td>
-						<center>
-							<h2>1</h2> 
-						</center>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<center>
-							<h3>确诊病例</h3>
-							<div style="width: 100px;"></div>
-						</center>
-					</td>
-					<td>
-						<center>
-							<h3>治愈</h3>
-							<div style="width: 100px;"></div>
-						</center>
-					</td>
-					<td>
-						<center>
-							<h3>死亡</h3>
-							<div style="width: 100px;"></div>
-						</center>
-					</td>
-				</tr>
-			</table>
-			<table>
-				<tr>
-					<td><h3>国家</h3><div style="width: 100px;"></div></td>
-					<td><h3>确诊</h3><div style="width: 100px;"></div></td>
-					<td><h3>治愈</h3><div style="width: 100px;"></div></td>
-					<td><h3>死亡</h3><div style="width: 100px;"></div></td>
-				</tr>
-				<tr>
-					<td><h3>日本</h3></td>
-					<td><h3>20</h3></td>
-					<td><h3>1</h3></td>
-					<td><h3>-</h3></td>
-				</tr>
-				<tr>
-					<td><h3>泰国</h3></td>
-					<td><h3>19</h3></td>
-					<td><h3>8</h3></td>
-					<td><h3>-</h3></td>
-				</tr>
-				<tr>
-					<td><h3>新加坡</h3></td>
-					<td><h3>18</h3></td>
-					<td><h3>-</h3></td>
-					<td><h3>-</h3></td>
-				</tr>
-				<tr>
-					<td><h3>韩国</h3></td>
-					<td><h3>16</h3></td>
-					<td><h3>1</h3></td>
-					<td><h3>-</h3></td>
-				</tr>
-			</table>
+				</table>
+				<h1 id="guonei">国内疫情</h1>
+				<table>
+					<tr>
+						<td>
+							<center>
+								<h3>地区</h3>
+							</center>
+						</td>
+						<td>
+							<center>
+								<h3>确诊</h3>
+							</center>
+						</td>
+						<td>
+							<center>
+								<h3>治愈</h3>
+							</center>
+						</td>
+						<td>
+							<center>
+								<h3>死亡</h3>
+							</center>
+						</td>
+					</tr>
+					<tr>
+						<td><h3>湖北</h3>  <div style="width: 100px;"></div></td>
+						<td><center><h3>13522</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>396</h3> </center>  <div style="width: 100px;"></div></td>
+						<td><center><h3>414</h3> </center>  <div style="width: 100px;"></div></td>
+					</tr>
+					<tr>
+						<td><h3>武汉</h3> <div style="width: 100px;"></div></td>
+						<td><center><h3>6384</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>303</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>313</h3></center> <div style="width: 100px;"></div></td>
+					</tr>
+					<tr>
+						<td><h3>黄冈</h3><div style="width: 100px;"></div></td>
+						<td><center><h3>1422</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>41</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>19</h3></center> <div style="width: 100px;"></div></td>
+					</tr>
+					<tr>
+						<td><h3>孝感</h3><div style="width: 100px;"></div></td>
+						<td><center><h3>1120</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>4</h3></center> <div style="width: 100px;"></div></td>
+						<td><center><h3>17</h3></center> <div style="width: 100px;"></div></td>
+					</tr>
+				</table>
+				
+				<h1 id="guowai">国外疫情</h1>
+				<table>
+					<tr>
+						<td>
+							<center>
+								<h2>161</h2>
+							</center>
+						</td>
+						<td>
+							<center>
+								<h2>16</h2> 
+							</center>
+						</td>
+						<td>
+							<center>
+								<h2>1</h2> 
+							</center>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<center>
+								<h3>确诊病例</h3>
+								<div style="width: 100px;"></div>
+							</center>
+						</td>
+						<td>
+							<center>
+								<h3>治愈</h3>
+								<div style="width: 100px;"></div>
+							</center>
+						</td>
+						<td>
+							<center>
+								<h3>死亡</h3>
+								<div style="width: 100px;"></div>
+							</center>
+						</td>
+					</tr>
+				</table>
+				<table>
+					<tr>
+						<td><h3>国家</h3><div style="width: 100px;"></div></td>
+						<td><h3>确诊</h3><div style="width: 100px;"></div></td>
+						<td><h3>治愈</h3><div style="width: 100px;"></div></td>
+						<td><h3>死亡</h3><div style="width: 100px;"></div></td>
+					</tr>
+					<tr>
+						<td><h3>日本</h3></td>
+						<td><h3>20</h3></td>
+						<td><h3>1</h3></td>
+						<td><h3>-</h3></td>
+					</tr>
+					<tr>
+						<td><h3>泰国</h3></td>
+						<td><h3>19</h3></td>
+						<td><h3>8</h3></td>
+						<td><h3>-</h3></td>
+					</tr>
+					<tr>
+						<td><h3>新加坡</h3></td>
+						<td><h3>18</h3></td>
+						<td><h3>-</h3></td>
+						<td><h3>-</h3></td>
+					</tr>
+					<tr>
+						<td><h3>韩国</h3></td>
+						<td><h3>16</h3></td>
+						<td><h3>1</h3></td>
+						<td><h3>-</h3></td>
+					</tr>
+				</table>
+				
+				<h1 id="qianxi">迁徙地图</h1>
+				<table>
+					<tr>
+						<td><h3>排名</h3><div style="width: 50px;"></div></td>
+						<td><h3>城市名称</h3><div style="width: 250px;"></div></td>
+						<td><h3>迁入比例</h3><div style="width: 100px;"></div></td>
+					</tr>
+					<tr>
+						<td><h3>1</h3></td>
+						<td><h3>北京市</h3></td>
+						<td><h3>4.79%</h3></td>
+					</tr>
+					<tr>
+						<td><h3>2</h3></td>
+						<td><h3>成都市</h3></td>
+						<td><h3>4.43%</h3></td>
+					</tr>
+					<tr>
+						<td><h3>3</h3></td>
+						<td><h3>上海市</h3></td>
+						<td><h3>3.89%</h3></td>
+					</tr>
+					<tr>
+						<td><h3>4</h3></td>
+						<td><h3>广州市</h3></td>
+						<td><h3>3.37%</h3></td>
+					</tr>
+				</table>
+				<div style="height: 100px;"></div>
+				<p>
+					<h2>积极防护，保护自己，戴口罩，勤洗手</h2>
+				</p>
+				<div style="height: 100px;"></div>
+			</div>
 		</center>
-	
 	</body>
 </html>
